--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -4,7 +4,7 @@ import WideButton from "../components/WideButton.astro";
 import Form from "../components/Form.astro";
 ---
 
-<Layout title="Snoodev | Fast solutions for your small business">
+<Layout title="Snoodev | Services">
   <header>
     <h1>Snoodev | Services</h1>
   </header>
@@ -22,7 +22,7 @@ import Form from "../components/Form.astro";
         research or multiple rounds of revisions.
       </p><p>
         That's why we've designed our process around your needs. We offer fast,
-        simple services that won't break your bank account (or your back). We
+        quality services that won't break your bank account (or your back). We
         know how important it is for you to get things done quickly, so we'll
         work with you until we have exactly what you need. And because of our
         budget-friendly prices, we're able to provide great looking designs at
