--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -141,7 +141,7 @@ import Toast from "./Toast.astro";
       font-size: 2em;
       width: fit-content;
       height: fit-content;
-      max-width: 15em;
+      max-width: 19em;
       max-height: 35em;
       display: none;
       position: fixed;
@@ -207,17 +207,35 @@ import Toast from "./Toast.astro";
   const closeForm = document.getElementById("closeButton");
   const form = document.getElementById("hello");
 
-  submit.addEventListener("click", sendForm);
+  submit.addEventListener("click", function () {
+    sendForm();
+    clearForm();
+  });
 
   function clearForm() {
     const inputElements = document.querySelectorAll("input");
     const textareaInput = document.getElementById("message");
+    const submit = document.getElementById("submit");
+    const greyedOutButton = document.getElementById("greyedOutSubmit");
+    const emailWarning = document.getElementById("emailWarning");
+    const budgetWarning = document.getElementById("budgetWarning");
 
     inputElements.forEach((input) => {
       input.value = "";
     });
     textareaInput.value = "";
-  }
+    submit.style.display = "none";
+    greyedOutButton.style.display = "block";
+    emailWarning.style.display = "none";
+    budgetWarning.style.display = "none";
+
+    let elements = document.querySelectorAll(
+      "#name, #email, #budget, #message"
+    );
+    for (let i = 0; i < elements.length; i++) {
+      elements[i].classList.remove("error");
+    }
+  };
 
   async function sendForm() {
     let name = document.getElementById("name").value;
@@ -236,8 +254,6 @@ import Toast from "./Toast.astro";
     if (data) {
       console.log(data);
     }
-
-    document.getElementById("hello").reset();
 
     toast.style.visibility = "unset";
 
