style: removed dark mode preferences

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,7 +58,7 @@ const { title } = Astro.props;
   }
 
   @media (prefers-color-scheme: dark) {
-    :root[color-mode="user"] {
+    /* :root[color-mode="user"] {
       --color-accent: #f3a953;
       --color-bg: #333;
       --color-bg-secondary: #555;
@@ -70,7 +70,13 @@ const { title } = Astro.props;
       --color-text: #f7f7f7;
       --color-text-secondary: #aaa;
     }
-  }
+
+    svg path {
+  fill: #f2f3f3; */
+}
+
+
+  
 
   /* Layout * https://coolors.co/064acb-366ed8-f3a953-f2f3f3-69f7be-141414 / */
   article aside {
