style: card style

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,19 +6,19 @@ import Form from "../components/Form.astro";
 
 <Layout title="Snoodev | Fast solutions for your small business">
   <header>
-    <h1>Snoodev | About us</h1>
+    <h1>About us</h1>
   </header>
 
   <main>
-    <p data-aos="fade-in">
+    <p data-aos="fade-right">
       Snoodev is an independent design and development agency focused on helping
       small businesses build their products. We believe that the whole web is an
       open place, and as such, offer a full suite of <a href="/services"
         >services</a
       >, including strategic consulting, design and development, application
-      maintenance, copyrighting and support to meet your business needs.
+      maintenance, copywriting and support to meet your business needs.
     </p>
-    <p data-aos="fade-in">
+    <p data-aos="fade-left">
       For years businesses have been struggling to get their product out in the
       open. Getting your product online is a hassle. It's slow, expensive, and
       inflexible. Things just never seem to work out, and if they do, it takes
@@ -28,7 +28,7 @@ import Form from "../components/Form.astro";
       >. We understand this, and that's why we created Snoodev.
     </p>
   </main>
-  <div data-aos="fade-in">
+  <div data-aos="fade-right">
     <WideButton />
   </div>
 
