--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -6,7 +6,7 @@ import Form from "../components/Form.astro";
 
 <Layout title="Snoodev | Design">
   <header>
-    <h1>Snoodev | Design</h1>
+    <h1>Design</h1>
   </header>
 </Layout>
 
