--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Snoodev | Privacy Policy">
   <header>
-    <h1>Snoodev | Privacy Policy</h1>
+    <h1>Privacy Policy</h1>
   </header>
 
   <main>
